--- a/index.html
+++ b/index.html
@@ -3,12 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
     <title>Meeting Cost App</title>
 </head>
-
 <body>
-    <h1>Meeting Cost Calculator</h1>
-    <form></form>
 
+<div class="input_container">
+    <h1>Meeting Cost Calculator</h1>
+
+    <div id="inputs"></div>
+
+    <div class="graderow">
+        <button class="btn" onclick="addGrade()">Add additional grades</button>
+
+    </div>
+
+    </div>
+
+<button class="btn" onclick="calculate()">Calculate cost</button>
+
+</div>
+
+<div id="result_container">
+    <h2>Results</h2>
+    <p id="result"></p>
+</div>
+    
+</div>
+
+<script src="script.js"></script>
 
 </body> 
+</html>
