development of basic app build in html and js

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <h1>Meeting Cost Calculator</h1>
 
-<div class="input-container">
+<div id="input-container">
 
     <div id="top-row">
         <input
@@ -22,33 +22,33 @@
             class="duration"
             placeholder="Enter meeting duration"
             >
-        </div>
+    </div>
     
-        <div id="second-row">
-            <input 
+    <div id="second-row">
+        <input 
             type="number"
             class="attendeecount"
             min="1"
             placeholder="Number of attendees"
-            >
+        >
 
-            <select class="gradeselect">
-                <option value="G6">G6</option>
-                <option value="G7">G7</option>
-                <option value="SEO">SEO</option>
-                <option value="HEO">HEO</option>
-                <option value="EO">EO</option>
-                <option value="EA">EA</option>
-            </select>
+        <select class="gradeselect">
+            <option value="G6">G6</option>
+            <option value="G7">G7</option>
+            <option value="SEO">SEO</option>
+            <option value="HEO">HEO</option>
+            <option value="EO">EO</option>
+            <option value="EA">EA</option>
+        </select>
+    </div>
 
-            <button class="btn" onclick="addattendee()">Add additional attendees</button>
-        </div>
+    <button class="btn" onclick="addattendee()">Add additional attendees</button>
 
     </div>
 
-    </div>
+    <div>
 
-<button class="btn" onclick="calculate()">Calculate cost</button>
+    <button class="btn" onclick="calculate()">Calculate cost</button>
 
 </div>
 
@@ -56,6 +56,8 @@
     <h2>Results</h2>
     <p id="result"></p>
 </div>
+
+    <script src="script.js"></script>
 
 </body> 
 </html>
