--- a/index.html
+++ b/index.html
@@ -14,43 +14,32 @@
 
 <h1>Meeting Cost Calculator</h1>
 
-<div id="input-container">
+<div class="input-container">
 
-    <div id="top-row">
-        <input
-            type="number"
-            class="duration"
-            placeholder="Enter meeting duration"
-            >
-    </div>
+        <h3> Meeting duration </h3>
+
+        <div id="top-row">
+            <input
+                type="number"
+                class="duration"
+                placeholder="Enter meeting duration"
+                >
+        </div>
+
+        <h3> Attendees </h3>
+
+        <div id="sec-row"></div>
+
+        <button class="btn" onclick="addattendee()">Add additional attendees</button>
+
+        <button class="btn" onclick="calculate()">Calculate cost</button>
+
+        </div>
     
-    <div id="second-row">
-        <input 
-            type="number"
-            class="attendeecount"
-            min="1"
-            placeholder="Number of attendees"
-        >
-
-        <select class="gradeselect">
-            <option value="G6">G6</option>
-            <option value="G7">G7</option>
-            <option value="SEO">SEO</option>
-            <option value="HEO">HEO</option>
-            <option value="EO">EO</option>
-            <option value="EA">EA</option>
-        </select>
     </div>
-
-    <button class="btn" onclick="addattendee()">Add additional attendees</button>
-
-    </div>
-
-    <div>
-
-    <button class="btn" onclick="calculate()">Calculate cost</button>
 
 </div>
+
 
 <div id="result_container">
     <h2>Results</h2>
