--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <input
             type="number"
             class="duration"
+            min="0.5"
+            step="0.5"
+            value="0.5"
             placeholder="Enter meeting duration"
             >
     </div>
