fix to add btn duplications

--- a/index.html
+++ b/index.html
@@ -30,9 +30,14 @@
             >
     </div>
 
+    <div class="attendees-head">
+
     <h3> Attendees </h3>
 
-    <div id="sec-row"></div>
+            <button class="addbtn" onclick="addattendee()"></button> </div>
+
+    <div id="sec-row">
+    </div>
 
     <button class="btn" onclick="calculate()">Calculate cost</button>
 
