app design improvements

--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
             class="duration"
             min="0.5"
             step="0.5"
-            value="0.5"
-            placeholder="Enter meeting duration"
+            placeholder="Enter the meeting duration"
             >
     </div>
 
@@ -39,12 +38,12 @@
     <div id="sec-row">
     </div>
 
-    <button class="btn" onclick="calculate()">Calculate cost</button>
+    <button class="costbtn" onclick="calculate()">Calculate cost</button>
 
 </div>
 
-<div id="result_container">
-    <h2>Results</h2>
+<div class="results-container">
+    <h3>Results</h3>
     <p id="result"></p>
 </div>
 
